--- a/analyzers.ini
+++ b/analyzers.ini
@@ -1,26 +1,25 @@
 ; Themes lists for Symfony
-; Generated on Thu, 13 Dec 2018 10:07:51 +0000
+; Generated on Wed, 19 Dec 2018 16:20:21 +0000
 ; Version : 0.5
-; Build : 2
+; Build : 3
 
 
-All[] = "Symfony/Symfony28Undefined";
-All[] = "Symfony/Symfony30Undefined";
-All[] = "Symfony/Symfony31Undefined";
-All[] = "Symfony/Symfony32Undefined";
-All[] = "Symfony/Symfony33Undefined";
-All[] = "Symfony/Symfony34Undefined";
-All[] = "Symfony/Symfony40Undefined";
+; All has 2 analysis
 All[] = "Symfony/SymfonyMissing";
 All[] = "Symfony/SymfonyUsage";
 
 
-Symfony[] = "Symfony/Symfony28Undefined";
-Symfony[] = "Symfony/Symfony30Undefined";
-Symfony[] = "Symfony/Symfony31Undefined";
-Symfony[] = "Symfony/Symfony32Undefined";
-Symfony[] = "Symfony/Symfony33Undefined";
-Symfony[] = "Symfony/Symfony34Undefined";
-Symfony[] = "Symfony/Symfony40Undefined";
+; Symfony has 2 analysis
 Symfony[] = "Symfony/SymfonyMissing";
 Symfony[] = "Symfony/SymfonyUsage";
+
+
+; Boo has 3 analysis
+Boo[] = "1";
+Boo[] = "2";
+Boo[] = "5";
+
+
+; Coo has 1 analysis
+Coo[] = "3";
+
