Moved analyzers.ini to Analyzer folder

--- a/Analyzer/analyzers.ini
+++ b/Analyzer/analyzers.ini
@@ -1,16 +1,31 @@
+; Themes lists for Symfony
+; Generated on Wed, 19 Dec 2018 16:32:14 +0000
+; Version : 0.5
+; Build : 4
+
+
+; All has 10 analysis
+All[] = "Symfony/SymfonyMissing";
 All[] = "Symfony/SymfonyUsage";
 All[] = "Symfony/Symfony_3_0";
-
 All[] = "Symfony/Symfony_3_1";
-
 All[] = "Symfony/Symfony_3_2";
-
 All[] = "Symfony/Symfony_3_3";
-
 All[] = "Symfony/Symfony_3_4";
-
 All[] = "Symfony/Symfony_4_0";
-
 All[] = "Symfony/Symfony_4_1";
-
 All[] = "Symfony/Symfony_4_2";
+
+
+; Symfony has 10 analysis
+Symfony[] = "Symfony/SymfonyMissing";
+Symfony[] = "Symfony/SymfonyUsage";
+Symfony[] = "Symfony/Symfony_3_0";
+Symfony[] = "Symfony/Symfony_3_1";
+Symfony[] = "Symfony/Symfony_3_2";
+Symfony[] = "Symfony/Symfony_3_3";
+Symfony[] = "Symfony/Symfony_3_4";
+Symfony[] = "Symfony/Symfony_4_0";
+Symfony[] = "Symfony/Symfony_4_1";
+Symfony[] = "Symfony/Symfony_4_2";
+
